--- a/src/app/global.css
+++ b/src/app/global.css
@@ -1,5 +1,5 @@
-body{
-  width: 100vw;
-  height: 100vh;
-  background-color: azure;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
